Fix overflow issue with rotating footer icon frame

--- a/recruitment-task/src/app/app.component.scss
+++ b/recruitment-task/src/app/app.component.scss
@@ -2,4 +2,5 @@
   min-height: 100%;
   display: grid;
   grid-template-rows: 1fr auto;
+  overflow: clip;
 }
