--- a/recruitment-task/src/app/core/footer/footer.component.scss
+++ b/recruitment-task/src/app/core/footer/footer.component.scss
@@ -4,7 +4,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  overflow: clip;
 }
 
 @media (width>960px) {
